// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders RichText from WordPress components 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "hi",
    }
  }
/>
`;

exports[`renders our Save component 1`] = `
<p
  className="my-class"
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "My content",
      }
    }
  />
</p>
`;
